galley/pkg/config/analysis/analyzers/testdata/virtualservice_destinations.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: default
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
  namespace: default
spec:
  host: reviews
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-reviews
  namespace: default
spec:
  hosts:
  - external-reviews.org
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-bogushost
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: reviews-bogus
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-bogussubset
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: reviews
        subset: bogus
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-fqdn
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-external
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: external-reviews.org
